[package]
name = "uff"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/myOmikron/uff-lang"
description = "Compiler for a language that makes you say 'big ouf' often"
license = "WTFPL"
authors = ["myOmikron <git@omikron.dev>"]

[dependencies]
# cli parser
clap = { version = "4.0.25"}
# llvm bindings
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master"}
# Create safe temporary files
tempfile = { version = "~3.3" }
# Regular expressions
regex = { version = "1" }
# Lazy evaluating
once_cell = { version = "~1.16" }
# Determine the path of a executable
which = { version = "~4.3" }
# Async framework
tokio = { version = "~1.22"}

[features]
default = [
    "clap/derive",

    "inkwell/llvm11-0",

    "tokio/rt-multi-thread",
    "tokio/macros",
]